--- a/ComputingSystems.BoolArith/ComputingSystems.BoolArith.csproj
+++ b/ComputingSystems.BoolArith/ComputingSystems.BoolArith.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ComputingSystems.CombLogic.Interfaces\ComputingSystems.CombLogic.Interfaces.csproj" />
+    <ProjectReference Include="..\ComputingSystems.CombLogic.ReferenceImplementations\ComputingSystems.CombLogic.ReferenceImplementations.csproj" />
+  </ItemGroup>
+
 </Project>
