ALU tests (although they don't pass...)

--- a/ComputingSystems.BoolArith.ReferenceImplementation/ComputingSystems.BoolArith.ReferenceImplementation.csproj
+++ b/ComputingSystems.BoolArith.ReferenceImplementation/ComputingSystems.BoolArith.ReferenceImplementation.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ComputingSystems.BoolArith.Interfaces\ComputingSystems.BoolArith.Interfaces.csproj" />
+    <ProjectReference Include="..\ComputingSystems.Core\ComputingSystems.Core.csproj" />
   </ItemGroup>
 
 </Project>
