--- a/ComputingSystems.MachLang/ComputingSystems.MachLang.csproj
+++ b/ComputingSystems.MachLang/ComputingSystems.MachLang.csproj
@@ -5,4 +5,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ComputingSystems.Core\ComputingSystems.Core.csproj" />
+  </ItemGroup>
+
 </Project>
